--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Among Musk’s first acts as Twitter’s owner were to lay off about half the co
         </div>
    </section>
           <section id="footer">
-        <h5>"Contact Office:"</h5>
+        <h5>Contact Office:</h5>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3169.794681942473!2d-122.15296382341396!3d37.394687572083726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb0755d7d5b47%3A0xaa5d96e0a3eec104!2s3500%20Deer%20Creek%20Rd%2C%20Palo%20Alto%2C%20CA%2094304!5e0!3m2!1sen!2sus!4v1709085136630!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </section>
                  
