--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Among Musk’s first acts as Twitter’s owner were to lay off about half the co
         </article>
 
       <section id="videos">
-        <h3>Videos<h3>
+        <h4>Videos</h4>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/h-b_VFYrc7o?si=7n-Ixf-6ngGWxdgv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><iframe width="560" height="315" src="https://www.youtube.com/embed/K6D5FVH7wsE?si=-rTskzOX1t2UXs6N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                
         </div>
