--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <nav>
     <ul class="menu">
-      <li class="links">Home</li>
-      <li class="links">About me</li>
-      <li class="links">Videos</li>
-      <li class="links">Contact me</li>
+      <li><a href="#welcome">Home</a></li>
+      <li><a href="#aboutme">About me</a></li>
+      <li><a href="#videos">Videos</a></li>
+      <li><a href="#footer">Contact me</a></li>
       </nav>
     <section id="welcome"
       class="parallax-container">
@@ -29,8 +29,9 @@
     <br>
         <div class="line"></div>
         </section>
-      <section>
-      <article>
+    
+      <article id="aboutme">
+      
       <p> Elon Musk South African-born American entrepreneur who cofounded the electronic-payment firm PayPal and formed SpaceX, maker of launch vehicles and spacecraft. He was also one of the first significant investors in, as well as chief executive officer of, the electric car manufacturer Tesla. In addition, Musk acquired Twitter in 2022.
 Musk was born to a South African father and a Canadian mother. He displayed an early talent for computers and entrepreneurship. At age 12 he created a video game and sold it to a computer magazine. In 1988, after obtaining a Canadian passport, Musk left South Africa because he was unwilling to support apartheid through compulsory military service and because he sought the greater economic opportunities available in the United States.
 PayPal and SpaceX
